# numbTheoryLab

./: .gitignore  CMakeLists.txt  README.md
apps/: nttool.cpp
include/ntlab/: arithmetic.hpp  congruence.hpp  factor.hpp  primes.hpp
src/: arithmetic.cpp  congruence.cpp  factor.cpp  primes.cpp
